(se) WindowsSelectorImpl.c doesn't compile with Visual Studio 2008

XMLWordPrintable

    • b33
    • x86
    • windows_xp
    • Not verified

      Windows compiler update project:
      Attempting a build on Windows XP using Visual Studio 2008
       
      (full build log attached as product_build.log)


      make[4]: Entering directory `/cygdrive/g/tbell/6523947/jdk/make/java/nio'
      [... snip ...]
      C:/PROGRA~1/MICROS~1.0/VC/bin/cl -O1 -Zi -nologo -MD /D _STATIC_CPPLIB -Fdg:/tbell/6523947/build/windows-i586/tmp/java/java.nio/nio/obj/WindowsSelectorImpl.pdb -Fmg:/tbell/6523947/build/windows-i586/tmp/java/java.nio/nio/obj/WindowsSelectorImpl.map -W3 -DWIN32 -DIAL -D_LITTLE_ENDIAN -DWIN32 -D_X86_ -Dx86 -DWIN32_LEAN_AND_MEAN -I. -Ig:/tbell/6523947/build/windows-i586/tmp/java/java.nio/nio/CClassHeaders -I../../../src/windows/javavm/export -I../../../src/share/javavm/export -I../../../src/share/javavm/include -I../../../src/windows/javavm/include -I../../../src/share/native/sun/nio/ch -I../../../src/share/native/java/io -I../../../src/share/native/java/net -I../../../src/windows/native/java/net -Ig:/tbell/6523947/build/windows-i586/tmp/java/java.nio/nio/CClassHeaders/../../../java.lang/java/CClassHeaders -I../../../src/share/native/common -I../../../src/windows/native/common -I../../../src/share/native/java/nio -I../../../src/windows/native/java/nio -c -Fog:/tbell/6523947/build/windows-i586/tmp/java/java.nio/nio/obj/WindowsSelectorImpl.obj ../../../src/windows/native/sun/nio/ch/WindowsSelectorImpl.c
      WindowsSelectorImpl.c
      ../../../src/windows/native/sun/nio/ch/WindowsSelectorImpl.c(48) : error C2059: syntax error : 'constant'
      ../../../src/windows/native/sun/nio/ch/WindowsSelectorImpl.c(50) : error C2059: syntax error : 'constant'
      ../../../src/windows/native/sun/nio/ch/WindowsSelectorImpl.c(190) : error C2101: '&' on constant
      make[4]: *** [g:/tbell/6523947/build/windows-i586/tmp/java/java.nio/nio/obj/WindowsSelectorImpl.obj] Error 2
      make[4]: Leaving directory `/cygdrive/g/tbell/6523947/jdk/make/java/nio'
      make[3]: *** [all] Error 1
      make[3]: Leaving directory `/cygdrive/g/tbell/6523947/jdk/make/java'
      make[2]: *** [all] Error 1
      make[2]: Leaving directory `/cygdrive/g/tbell/6523947/jdk/make'
      make[1]: *** [jdk-build] Error 2
      make[1]: Leaving directory `/cygdrive/g/tbell/6523947'
      make: *** [product_build] Error 2

            Assignee:
            Alan Bateman
            Reporter:
            Tim Bell
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:
              Imported:
              Indexed: