6728728: (se) WindowsSelectorImpl.c doesn't compile with Visual Studio 2008

Reviewed-by: tbell, chegar